WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115998
fourthTier: FTL shouldn't use FastISel and Small code model should be turned off for now
https://bugs.webkit.org/show_bug.cgi?id=115998
Summary
fourthTier: FTL shouldn't use FastISel and Small code model should be turned ...
Filip Pizlo
Reported
2013-05-12 17:28:27 PDT
Patch forthcoming. This is mostly for corresponding fixes in LLVM.
Attachments
the patch
(2.39 KB, patch)
2013-05-12 17:31 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
LLVM patch
(503 bytes, patch)
2013-05-12 17:31 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(2.28 KB, patch)
2013-05-21 12:07 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-05-12 17:31:07 PDT
Created
attachment 201514
[details]
the patch
Filip Pizlo
Comment 2
2013-05-12 17:31:22 PDT
Created
attachment 201515
[details]
LLVM patch
Geoffrey Garen
Comment 3
2013-05-15 15:18:59 PDT
Comment on
attachment 201514
[details]
the patch r=me
Filip Pizlo
Comment 4
2013-05-21 11:16:01 PDT
Comment on
attachment 201514
[details]
the patch Clearing r+ because I'm just going to turn off the small code model, since it doesn't work, and my bugfix isn't being reviewed.
Filip Pizlo
Comment 5
2013-05-21 12:07:46 PDT
Created
attachment 202456
[details]
the patch
Filip Pizlo
Comment 6
2013-05-21 12:43:19 PDT
Landed in
http://trac.webkit.org/changeset/150470
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug