fourthTier: FTL shouldn't use FastISel and Small code model should be turned off for now https://bugs.webkit.org/show_bug.cgi?id=115998

Reviewed by Oliver Hunt.

This switches off FastISel and makes it possible to turn off Small code model.

* ftl/FTLCompile.cpp:
(JSC::FTL::compile):
* runtime/Options.h:
(JSC):

Canonical link: https://commits.webkit.org/136955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153171 268f45cc-cd09-0410-ab3c-d52691b4dbfc